test_data/pos/ss/652617/Windows/652617.diso.rtf
#AUCpreD: order/disorder state prediction results by profile mode 
#Disorder residues are marked with asterisks (*) above threshold 0.500 
# Ordered residues are marked with dots (.) below threshold 0.500 
   1 M * 1.000 
   2 S * 0.996 
   3 R * 0.865 
   4 P . 0.180 
   5 T . 0.054 
   6 V . 0.036 
   7 V . 0.029 
   8 T . 0.025 
   9 V . 0.024 
  10 T . 0.024 
  11 E . 0.024 
  12 T . 0.025 
  13 P . 0.027 
  14 R . 0.029 
  15 N . 0.030 
  16 P . 0.029 
  17 G . 0.027 
  18 S . 0.022 
  19 Y . 0.019 
  20 E . 0.017 
  21 V . 0.016 
  22 N . 0.016 
  23 V . 0.016 
  24 E . 0.016 
  25 R . 0.016 
  26 D . 0.015 
  27 G . 0.014 
  28 K . 0.014 
  29 M . 0.014 
  30 V . 0.014 
  31 V . 0.014 
  32 G . 0.015 
  33 R . 0.016 
  34 A . 0.018 
  35 R . 0.020 
  36 A . 0.023 
  37 G . 0.026 
  38 S . 0.027 
  39 D . 0.026 
  40 P . 0.025 
  41 G . 0.024 
  42 A . 0.022 
  43 A . 0.020 
  44 A . 0.018 
  45 A . 0.016 
  46 K . 0.015 
  47 A . 0.014 
  48 M . 0.014 
  49 Q . 0.014 
  50 M . 0.013 
  51 A . 0.013 
  52 M . 0.013 
  53 E . 0.013 
  54 W . 0.013 
  55 G . 0.013 
  56 S . 0.012 
  57 P . 0.012 
  58 N . 0.012 
  59 Y . 0.012 
  60 V . 0.012 
  61 I . 0.012 
  62 L . 0.012 
  63 G . 0.012 
  64 S . 0.012 
  65 N . 0.012 
  66 K . 0.012 
  67 V . 0.012 
  68 L . 0.013 
  69 A . 0.013 
  70 F . 0.014 
  71 I . 0.015 
  72 P . 0.018 
  73 E . 0.022 
  74 Q . 0.033 
  75 L . 0.055 
  76 R . 0.120 
  77 V . 0.350 
  78 K * 0.836 
  79 M * 0.990 
