test_data/neg/ss/655288/Windows/655288.diso.rtf
#AUCpreD: order/disorder state prediction results by profile mode 
#Disorder residues are marked with asterisks (*) above threshold 0.500 
# Ordered residues are marked with dots (.) below threshold 0.500 
   1 M * 0.997 
   2 S . 0.141 
   3 Y . 0.029 
   4 L . 0.019 
   5 V . 0.017 
   6 T . 0.016 
   7 I . 0.015 
   8 F . 0.015 
   9 S . 0.014 
  10 I . 0.014 
  11 N . 0.014 
  12 A . 0.013 
  13 I . 0.014 
  14 G . 0.014 
  15 V . 0.014 
  16 V . 0.014 
  17 R . 0.014 
  18 R . 0.014 
  19 Y . 0.015 
  20 D . 0.018 
  21 T . 0.023 
  22 T . 0.031 
  23 A . 0.037 
  24 R . 0.037 
  25 S . 0.033 
  26 R . 0.027 
  27 T . 0.020 
  28 D . 0.016 
  29 A . 0.013 
  30 A . 0.012 
  31 S . 0.011 
  32 V . 0.011 
  33 L . 0.011 
  34 I . 0.011 
  35 K . 0.011 
  36 Y . 0.011 
  37 K . 0.012 
  38 A . 0.014 
  39 P . 0.016 
  40 R . 0.017 
  41 G . 0.017 
  42 Y . 0.017 
  43 K . 0.016 
  44 F . 0.015 
  45 D . 0.015 
  46 R . 0.015 
  47 F . 0.016 
  48 E . 0.018 
  49 L . 0.019 
  50 S . 0.022 
  51 R . 0.025 
  52 E . 0.030 
  53 R . 0.033 
  54 S . 0.037 
  55 I . 0.043 
  56 F . 0.053 
  57 D . 0.078 
  58 V . 0.158 
  59 L . 0.492 
